--- a/deploy/conf/supervisord.conf
+++ b/deploy/conf/supervisord.conf
@@ -8,7 +8,8 @@ password = lolcats
 
 [unix_http_server]
 file=/var/run/supervisor.sock   ; (the path to the socket file)
-chmod=0700                       ; sockef file mode (default 0700)
+chown=root:clindesk-staging     ; TODO: Fix permissions along with issue 1
+chmod=0760                      ; socket file mode (default 0700)
 
 [supervisord]
 logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/supervisord.log)
