--- a/deploy/conf/nginx_wca-prod.conf
+++ b/deploy/conf/nginx_wca-prod.conf
@@ -1,10 +1,10 @@
-# Clindesk Staging configuration
+# WCA Prod configuration
 server {
     listen   80;
     # listen [::]:80; # One day Amazon, one day.
-    server_name staging.clindesk.org;
-    root /home/clindesk-staging/clindesk;
-    # Serve static files directly.
+    server_name www.whitecoatacademy.org;
+    root /home/wca-prod/clindesk;
+    # Serve static files directly. These are super-cached by CloudFront.
     location /s/ {
         # if asset versioning is used
         #if ($query_string) {
@@ -22,8 +22,14 @@ server {
         proxy_set_header X-Scheme $scheme;
         proxy_connect_timeout 10;
         proxy_read_timeout 10;
-        proxy_pass http://localhost:8001/;
+        proxy_pass http://localhost:8002/;
     }
     # what to serve if upstream is not available or crashes
     error_page 500 502 503 504 /media/50x.html;
+}
+
+server {
+       # Rewrite to www.
+       server_name clindesk.org;
+       return 301 $scheme://www.whitecoatacademy.org$request_uri;
 }
