--- a/deploy/conf/nginx_wca-staging.conf
+++ b/deploy/conf/nginx_wca-staging.conf
@@ -1,9 +1,9 @@
-# Clindesk Staging configuration
+# WCA Staging configuration
 server {
     listen   80;
     # listen [::]:80; # One day Amazon, one day.
-    server_name staging.clindesk.org;
-    root /home/clindesk-staging/clindesk;
+    server_name staging.whitecoatacademy.org;
+    root /home/wca-prod/clindesk;
     # Serve static files directly.
     location /s/ {
         # if asset versioning is used
@@ -22,7 +22,7 @@ server {
         proxy_set_header X-Scheme $scheme;
         proxy_connect_timeout 10;
         proxy_read_timeout 10;
-        proxy_pass http://localhost:8001/;
+        proxy_pass http://localhost:8003/;
     }
     # what to serve if upstream is not available or crashes
     error_page 500 502 503 504 /media/50x.html;
