--- a/deploy/conf/nginx_wca-staging.conf
+++ b/deploy/conf/nginx_wca-staging.conf
@@ -3,7 +3,7 @@ server {
     listen   80;
     # listen [::]:80; # One day Amazon, one day.
     server_name staging.whitecoatacademy.org;
-    root /home/wca-prod/clindesk;
+    root /home/wca-staging/clindesk;
     # Serve static files directly.
     location /s/ {
         # if asset versioning is used
@@ -11,9 +11,7 @@ server {
         #    expires max;
         #}
     }
-    #location /admin/media/ {
-    #    root /home/clindesk-prod/lib/python2.7/site-packages/django/contrib;
-    # }
+    location /favicon.ico { alias /home/wca-staging/clindesk/s/favicon.wca.ico }
     location / {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
