--- a/deploy/conf/nginx_wca-prod.conf
+++ b/deploy/conf/nginx_wca-prod.conf
@@ -11,9 +11,7 @@ server {
         #    expires max;
         #}
     }
-    #location /admin/media/ {
-    #    root /home/clindesk-prod/lib/python2.7/site-packages/django/contrib;
-    # }
+    location /favicon.ico { alias /home/wca-prod/clindesk/s/favicon.wca.ico }
     location / {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
