Update to clean up scripts. This addresses a good chunk of issue #15.
TODO: Modularize more.

--- a/deploy/conf/supervisord_cd.conf
+++ b/deploy/conf/supervisord_cd.conf
@@ -1,3 +1,11 @@
+[program:clindesk-prod]
+directory = /home/clindesk-prod/clindesk/
+user = clindesk-prod
+command = /home/clindesk-prod/run_gunicorn_clindesk-prod.sh
+stdout_logfile = /var/log/supervisor/clindesk-prod.log
+stderr_logfile = /var/log/supervisor/clindesk-prod_err.log
+priority = 1
+
 [program:clindesk-staging]
 directory = /home/clindesk-staging/clindesk/
 user = clindesk-staging
