--- a/deploy/conf/supervisord_wca.conf
+++ b/deploy/conf/supervisord_wca.conf
@@ -1,3 +1,11 @@
+[program:wca-prod]
+directory = /home/wca-prod/clindesk/
+user = wca-prod
+command = /home/wca-prod/run_gunicorn_wca-prod.sh
+stdout_logfile = /var/log/supervisor/wca-prod.log
+stderr_logfile = /var/log/supervisor/wca-prod_err.log
+priority = 5
+
 [program:wca-staging]
 directory = /home/wca-staging/clindesk/
 user = wca-staging
