--- a/deploy/conf/nginx_wca.conf
+++ b/deploy/conf/nginx_wca.conf
@@ -1,4 +1,4 @@
-# WCA Prod configuration
+### WCA PROD
 server {
     listen   80;
     # listen [::]:80; # One day Amazon, one day.
@@ -30,4 +30,32 @@ server {
        # Rewrite to www.
        server_name clindesk.org;
        return 301 $scheme://www.whitecoatacademy.org$request_uri;
+}
+
+# Staging
+server {
+    listen   80;
+    # listen [::]:80; # One day Amazon, one day.
+    server_name staging.whitecoatacademy.org;
+    root /home/wca-staging/clindesk;
+    # Serve static files directly.
+    location /s/ {
+        # if asset versioning is used
+        #if ($query_string) {
+        #    expires max;
+        #}
+    }
+    location /favicon.ico { alias /home/wca-staging/clindesk/s/favicon.wca.ico }
+    location / {
+        proxy_pass_header Server;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_connect_timeout 10;
+        proxy_read_timeout 10;
+        proxy_pass http://localhost:8003/;
+    }
+    # what to serve if upstream is not available or crashes
+    error_page 500 502 503 504 /media/50x.html;
 }
