Setup robots.txt. Closes issue #10.
TODO: Change to one user for each site? Not sure...

--- a/deploy/conf/nginx_wca.conf
+++ b/deploy/conf/nginx_wca.conf
@@ -12,6 +12,7 @@ server {
         #}
     }
     location /favicon.ico { alias /home/wca-prod/clindesk/s/favicon.wca.ico }
+    location /robots.txt { alias /home/wca-prod/clindesk/s/robots.prod.txt }
     location / {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
@@ -46,6 +47,7 @@ server {
         #}
     }
     location /favicon.ico { alias /home/wca-staging/clindesk/s/favicon.wca.ico }
+    location /robots.txt { alias /home/wca-staging/clindesk/s/robots.staging.txt }
     location / {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
