Add semicolons to broken syntax. Closes #15 for now.

--- a/deploy/conf/nginx_cd.conf
+++ b/deploy/conf/nginx_cd.conf
@@ -11,8 +11,8 @@ server {
         #    expires max;
         #}
     }
-    location /favicon.ico { alias /home/clindesk-prod/clindesk/s/favicon.cd.ico }
-    location /robots.txt { alias /home/clindesk-prod/clindesk/s/robots.prod.txt }
+    location /favicon.ico { alias /home/clindesk-prod/clindesk/s/favicon.cd.ico; }
+    location /robots.txt { alias /home/clindesk-prod/clindesk/s/robots.prod.txt; }
     location / {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
@@ -46,8 +46,8 @@ server {
         #    expires max;
         #}
     }
-    location /favicon.ico { alias /home/clindesk-staging/clindesk/s/favicon.cd.ico }
-    location /robots.txt { alias /home/clindesk-staging/clindesk/s/robots.staging.txt }
+    location /favicon.ico { alias /home/clindesk-staging/clindesk/s/favicon.cd.ico; }
+    location /robots.txt { alias /home/clindesk-staging/clindesk/s/robots.staging.txt; }
     location / {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
