--- a/deploy/conf/nginx_wca.conf
+++ b/deploy/conf/nginx_wca.conf
@@ -11,8 +11,8 @@ server {
         #    expires max;
         #}
     }
-    location /favicon.ico { alias /home/wca-prod/clindesk/s/favicon.wca.ico }
-    location /robots.txt { alias /home/wca-prod/clindesk/s/robots.prod.txt }
+    location /favicon.ico { alias /home/wca-prod/clindesk/s/favicon.wca.ico; }
+    location /robots.txt { alias /home/wca-prod/clindesk/s/robots.prod.txt; }
     location / {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
@@ -46,8 +46,8 @@ server {
         #    expires max;
         #}
     }
-    location /favicon.ico { alias /home/wca-staging/clindesk/s/favicon.wca.ico }
-    location /robots.txt { alias /home/wca-staging/clindesk/s/robots.staging.txt }
+    location /favicon.ico { alias /home/wca-staging/clindesk/s/favicon.wca.ico; }
+    location /robots.txt { alias /home/wca-staging/clindesk/s/robots.staging.txt; }
     location / {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
