--- a/deploy/conf/nginx_cd.conf
+++ b/deploy/conf/nginx_cd.conf
@@ -1,3 +1,20 @@
+##### General Autoupdate Script
+# On a git push, Github POSTs to a magic url on port 1337, which triggers a special autoupdate script.
+server {
+       listen 1337;
+       location / {
+            proxy_pass_header Server;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Scheme $scheme;
+            proxy_connect_timeout 10;
+            proxy_read_timeout 10;
+       		proxy_pass http://localhost:5000/;
+       }
+}
+
+
 ##### Clindesk PROD
 server {
     listen   80;
