Fix permissions issue

--- a/deploy/conf/supervisord.conf
+++ b/deploy/conf/supervisord.conf
@@ -8,7 +8,7 @@ password = lolcats
 
 [unix_http_server]
 file=/var/run/supervisor.sock   ; (the path to the socket file)
-chown=root:clindesk-staging     ; TODO: Fix permissions along with issue 1
+chown=root:autoupdate           ; The autoupdate script is auto-invoked on a GitHub push.
 chmod=0760                      ; socket file mode (default 0700)
 
 [supervisord]
