Big change: Move WCA & CD to the same users (prod & staging). For issue #4.

--- a/deploy/conf/nginx_cd.conf
+++ b/deploy/conf/nginx_cd.conf
@@ -20,7 +20,7 @@ server {
     listen   80;
     # listen [::]:80; # One day Amazon, one day.
     server_name www.clindesk.org;
-    root /home/clindesk-prod/clindesk;
+    root /home/prod/clindesk;
     # Serve static files directly. These are super-cached by CloudFront.
     location /s/ {
         # if asset versioning is used
@@ -28,8 +28,8 @@ server {
         #    expires max;
         #}
     }
-    location /favicon.ico { alias /home/clindesk-prod/clindesk/s/favicon.cd.ico; }
-    location /robots.txt { alias /home/clindesk-prod/clindesk/s/robots.prod.txt; }
+    location /favicon.ico { alias /home/prod/clindesk/s/favicon.cd.ico; }
+    location /robots.txt { alias /home/prod/clindesk/s/robots.prod.txt; }
     location / {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
@@ -55,7 +55,7 @@ server {
     listen   80;
     # listen [::]:80; # One day Amazon, one day.
     server_name staging.clindesk.org;
-    root /home/clindesk-staging/clindesk;
+    root /home/staging/clindesk;
     # Serve static files directly.
     location /s/ {
         # if asset versioning is used
@@ -63,8 +63,8 @@ server {
         #    expires max;
         #}
     }
-    location /favicon.ico { alias /home/clindesk-staging/clindesk/s/favicon.cd.ico; }
-    location /robots.txt { alias /home/clindesk-staging/clindesk/s/robots.staging.txt; }
+    location /favicon.ico { alias /home/staging/clindesk/s/favicon.cd.ico; }
+    location /robots.txt { alias /home/staging/clindesk/s/robots.staging.txt; }
     location / {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
