--- a/deploy/conf/nginx_wca.conf
+++ b/deploy/conf/nginx_wca.conf
@@ -3,7 +3,7 @@ server {
     listen   80;
     # listen [::]:80; # One day Amazon, one day.
     server_name www.whitecoatacademy.org;
-    root /home/wca-prod/clindesk;
+    root /home/prod/clindesk;
     # Serve static files directly. These are super-cached by CloudFront.
     location /s/ {
         # if asset versioning is used
@@ -11,8 +11,8 @@ server {
         #    expires max;
         #}
     }
-    location /favicon.ico { alias /home/wca-prod/clindesk/s/favicon.wca.ico; }
-    location /robots.txt { alias /home/wca-prod/clindesk/s/robots.prod.txt; }
+    location /favicon.ico { alias /home/prod/clindesk/s/favicon.wca.ico; }
+    location /robots.txt { alias /home/prod/clindesk/s/robots.prod.txt; }
     location / {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
@@ -38,7 +38,7 @@ server {
     listen   80;
     # listen [::]:80; # One day Amazon, one day.
     server_name staging.whitecoatacademy.org;
-    root /home/wca-staging/clindesk;
+    root /home/staging/clindesk;
     # Serve static files directly.
     location /s/ {
         # if asset versioning is used
@@ -46,8 +46,8 @@ server {
         #    expires max;
         #}
     }
-    location /favicon.ico { alias /home/wca-staging/clindesk/s/favicon.wca.ico; }
-    location /robots.txt { alias /home/wca-staging/clindesk/s/robots.staging.txt; }
+    location /favicon.ico { alias /home/staging/clindesk/s/favicon.wca.ico; }
+    location /robots.txt { alias /home/staging/clindesk/s/robots.staging.txt; }
     location / {
         proxy_pass_header Server;
         proxy_set_header Host $http_host;
