--- a/deploy/conf/supervisord_sites.conf
+++ b/deploy/conf/supervisord_sites.conf
@@ -1,31 +1,31 @@
 [program:clindesk-prod]
-directory = /home/clindesk-prod/clindesk/
-user = clindesk-prod
-command = /home/clindesk-prod/run_gunicorn_clindesk-prod.sh
+directory = /home/prod/clindesk/
+user = prod
+command = /home/prod/run_gunicorn_cd-prod.sh
 stdout_logfile = /var/log/supervisor/clindesk-prod.log
 stderr_logfile = /var/log/supervisor/clindesk-prod_err.log
 priority = 1
 
 [program:clindesk-staging]
-directory = /home/clindesk-staging/clindesk/
-user = clindesk-staging
-command = /home/clindesk-staging/run_gunicorn_clindesk-staging.sh
+directory = /home/staging/clindesk/
+user = staging
+command = /home/staging/run_gunicorn_cd-staging.sh
 stdout_logfile = /var/log/supervisor/clindesk-staging.log
 stderr_logfile = /var/log/supervisor/clindesk-staging_err.log
 priority = 15
 
 [program:wca-prod]
-directory = /home/wca-prod/clindesk/
-user = wca-prod
-command = /home/wca-prod/run_gunicorn_wca-prod.sh
+directory = /home/prod/clindesk/
+user = prod
+command = /home/prod/run_gunicorn_wca-prod.sh
 stdout_logfile = /var/log/supervisor/wca-prod.log
 stderr_logfile = /var/log/supervisor/wca-prod_err.log
 priority = 5
 
 [program:wca-staging]
-directory = /home/wca-staging/clindesk/
-user = wca-staging
-command = /home/wca-staging/run_gunicorn_wca-staging.sh
+directory = /home/staging/clindesk/
+user = staging
+command = /home/staging/run_gunicorn_wca-staging.sh
 stdout_logfile = /var/log/supervisor/wca-staging.log
 stderr_logfile = /var/log/supervisor/wca-staging_err.log
 priority = 10
