--- a/deploy/conf/nginx_wca.conf
+++ b/deploy/conf/nginx_wca.conf
@@ -29,7 +29,7 @@ server {
 
 server {
        # Rewrite to www.
-       server_name whitecoatacademy.org
+       server_name whitecoatacademy.org;
        return 301 $scheme://www.whitecoatacademy.org$request_uri;
 }
 
