Add random +1d expires, so we don't thrash CloudFront. Part of #21
TODO: Clean this up and set real cache times.

--- a/deploy/conf/nginx_cd.conf
+++ b/deploy/conf/nginx_cd.conf
@@ -10,7 +10,7 @@ server {
             proxy_set_header X-Scheme $scheme;
             proxy_connect_timeout 10;
             proxy_read_timeout 10;
-       		proxy_pass http://localhost:5000/;
+	    proxy_pass http://localhost:5000/;
        }
 }
 
@@ -23,10 +23,7 @@ server {
     root /home/prod/clindesk;
     # Serve static files directly. These are super-cached by CloudFront.
     location /s/ {
-        # if asset versioning is used
-        #if ($query_string) {
-        #    expires max;
-        #}
+    	     expires +1d;
     }
     location /favicon.ico { alias /home/prod/clindesk/s/favicon.cd.ico; }
     location /robots.txt { alias /home/prod/clindesk/s/robots.prod.txt; }
