--- a/deploy/conf/nginx_wca.conf
+++ b/deploy/conf/nginx_wca.conf
@@ -6,10 +6,7 @@ server {
     root /home/prod/clindesk;
     # Serve static files directly. These are super-cached by CloudFront.
     location /s/ {
-        # if asset versioning is used
-        #if ($query_string) {
-        #    expires max;
-        #}
+    	     expires +1d;
     }
     location /favicon.ico { alias /home/prod/clindesk/s/favicon.wca.ico; }
     location /robots.txt { alias /home/prod/clindesk/s/robots.prod.txt; }
