--- a/deploy/conf/nginx.conf
+++ b/deploy/conf/nginx.conf
@@ -46,6 +46,13 @@ http {
 	gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
 	##
+	# Overkill Security Settings (Because why not?)
+	##
+	add_header X-Content-Type-Options 'nosniff';
+	add_header X-Frame-Options 'DENY';
+	add_header X-XSS-Protection '1; mode=block';
+
+	##
 	# Virtual Host Configs
 	##
 
