Nginx tweaks and cleanups.

--- a/deploy/conf/nginx_cd.conf
+++ b/deploy/conf/nginx_cd.conf
@@ -23,7 +23,7 @@ server {
     root /home/prod/clindesk;
     # Serve static files directly. These are super-cached by CloudFront.
     location /s/ {
-    	     expires +1d;
+    	     expires +2d;
     }
     location /favicon.ico { alias /home/prod/clindesk/s/favicon.cd.ico; }
     location /robots.txt { alias /home/prod/clindesk/s/robots.prod.txt; }
@@ -37,8 +37,8 @@ server {
         proxy_read_timeout 10;
         proxy_pass http://localhost:8000/;
     }
-    # what to serve if upstream is not available or crashes
-    error_page 500 502 503 504 /media/50x.html;
+    # TODO: Create an error page for if/when Gunicorn crashes.
+    # error_page 500 502 503 504 /media/50x.html;
 }
 
 server {
@@ -55,10 +55,6 @@ server {
     root /home/staging/clindesk;
     # Serve static files directly.
     location /s/ {
-        # if asset versioning is used
-        #if ($query_string) {
-        #    expires max;
-        #}
     }
     location /favicon.ico { alias /home/staging/clindesk/s/favicon.cd.ico; }
     location /robots.txt { alias /home/staging/clindesk/s/robots.staging.txt; }
@@ -72,6 +68,4 @@ server {
         proxy_read_timeout 10;
         proxy_pass http://localhost:8001/;
     }
-    # what to serve if upstream is not available or crashes
-    error_page 500 502 503 504 /media/50x.html;
 }
