--- a/deploy/conf/nginx.conf
+++ b/deploy/conf/nginx.conf
@@ -17,9 +17,9 @@ http {
 	tcp_nodelay on;
 	keepalive_timeout 65;
 	types_hash_max_size 2048;
-	# server_tokens off;
+	server_tokens off;
 
-	# server_names_hash_bucket_size 64;
+	server_names_hash_bucket_size 32;
 	# server_name_in_redirect off;
 
 	include /etc/nginx/mime.types;
@@ -51,6 +51,7 @@ http {
 	add_header X-Content-Type-Options 'nosniff';
 	add_header X-Frame-Options 'DENY';
 	add_header X-XSS-Protection '1; mode=block';
+	add_header X-Powered-By 'Open Medical Education';
 
 	##
 	# Virtual Host Configs
