--- a/deploy/conf/nginx_wca.conf
+++ b/deploy/conf/nginx_wca.conf
@@ -4,9 +4,10 @@ server {
     # listen [::]:80; # One day Amazon, one day.
     server_name www.whitecoatacademy.org;
     root /home/prod/clindesk;
-    # Serve static files directly. These are super-cached by CloudFront.
+    # Serve static files directly.
+    # NOTE: These shouldn't be queried, since CloudFront/static points to ClinDesk.
     location /s/ {
-    	     expires +1d;
+    	     expires +2d;
     }
     location /favicon.ico { alias /home/prod/clindesk/s/favicon.wca.ico; }
     location /robots.txt { alias /home/prod/clindesk/s/robots.prod.txt; }
@@ -20,8 +21,8 @@ server {
         proxy_read_timeout 10;
         proxy_pass http://localhost:8002/;
     }
-    # what to serve if upstream is not available or crashes
-    error_page 500 502 503 504 /media/50x.html;
+    # TODO: Error page.
+    #   error_page 500 502 503 504 /media/50x.html;
 }
 
 server {
@@ -38,10 +39,6 @@ server {
     root /home/staging/clindesk;
     # Serve static files directly.
     location /s/ {
-        # if asset versioning is used
-        #if ($query_string) {
-        #    expires max;
-        #}
     }
     location /favicon.ico { alias /home/staging/clindesk/s/favicon.wca.ico; }
     location /robots.txt { alias /home/staging/clindesk/s/robots.staging.txt; }
@@ -55,6 +52,4 @@ server {
         proxy_read_timeout 10;
         proxy_pass http://localhost:8003/;
     }
-    # what to serve if upstream is not available or crashes
-    error_page 500 502 503 504 /media/50x.html;
 }
