Update nginx to add headers to HTML only.

--- a/deploy/conf/nginx_wca.conf
+++ b/deploy/conf/nginx_wca.conf
@@ -19,9 +19,13 @@ server {
         proxy_connect_timeout 10;
         proxy_read_timeout 10;
         proxy_pass http://localhost:8002/;
+
+        # Overkill Security Settings (Because why not?)
+        add_header X-Content-Type-Options 'nosniff';
+        add_header X-Frame-Options 'DENY';
+        add_header X-XSS-Protection '1; mode=block';
+        add_header X-Powered-By 'Open Medical Education';
     }
-    # TODO: Error page.
-    #   error_page 500 502 503 504 /media/50x.html;
 }
 
 server {
@@ -49,5 +53,11 @@ server {
         proxy_connect_timeout 10;
         proxy_read_timeout 10;
         proxy_pass http://localhost:8003/;
+
+        # Overkill Security Settings (Because why not?)
+        add_header X-Content-Type-Options 'nosniff';
+        add_header X-Frame-Options 'DENY';
+        add_header X-XSS-Protection '1; mode=block';
+        add_header X-Powered-By 'Open Medical Education';
     }
 }
