--- a/deploy/conf/nginx_cd.conf
+++ b/deploy/conf/nginx_cd.conf
@@ -34,6 +34,13 @@ server {
         proxy_connect_timeout 10;
         proxy_read_timeout 10;
         proxy_pass http://localhost:8000/;
+
+        # Overkill Security Settings (Because why not?)
+        add_header X-Content-Type-Options 'nosniff';
+        add_header X-Frame-Options 'DENY';
+        add_header X-XSS-Protection '1; mode=block';
+        add_header X-Powered-By 'Open Medical Education';
+
     }
     # TODO: Create an error page for if/when Gunicorn crashes.
     # error_page 500 502 503 504 /media/50x.html;
@@ -64,5 +71,11 @@ server {
         proxy_connect_timeout 10;
         proxy_read_timeout 10;
         proxy_pass http://localhost:8001/;
+
+        # Overkill Security Settings (Because why not?)
+        add_header X-Content-Type-Options 'nosniff';
+        add_header X-Frame-Options 'DENY';
+        add_header X-XSS-Protection '1; mode=block';
+        add_header X-Powered-By 'Open Medical Education';
     }
 }
