Include a +1h expires overall. We'll fix this later for issue #21

--- a/deploy/conf/nginx.conf
+++ b/deploy/conf/nginx.conf
@@ -45,6 +45,13 @@ http {
 	gzip_http_version 1.0;
 	gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
+        ##
+        # Basic Expires
+        ##
+        # Everything expires in one hour.
+        # Ohter elements can extend this (e.g. an expires +2d in an included module will become +2d1h)
+        expires +1h;
+
 	##
 	# Virtual Host Configs
 	##
