--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,18 @@
 freezepop.py
 s/bower_components
 node_modules/
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+*.yo-rc.json
+pids
+logs
+results
+npm-debug.log
+node_modules
+*.sublime-*
