--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "grunt-concurrent": "~0.5.0",
         "load-grunt-tasks": "~0.4.0",
         "time-grunt": "~0.3.1",
+        "grunt-aws-s3": "~0.9.0",
         "jshint-stylish": "~0.1.5",
         "assemble-contrib-permalinks": "*",
         "assemble-contrib-sitemap": "*"
