--- a/package.json
+++ b/package.json
@@ -3,32 +3,33 @@
     "version": "0.1.0",
     "dependencies": {},
     "devDependencies": {
-        "assemble": "~0.4.37",
-        "grunt": "~0.4.5",
-        "grunt-contrib-copy": "~0.5.0",
-        "grunt-contrib-concat": "~0.4.0",
-        "grunt-contrib-uglify": "~0.5.0",
-        "grunt-contrib-jshint": "~0.10.0",
-        "grunt-contrib-cssmin": "~0.10.0",
-        "grunt-contrib-connect": "~0.8.0",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-htmlmin": "~0.3.0",
-        "grunt-bower-install": "~1.4.0",
-        "grunt-contrib-imagemin": "~0.7.1",
-        "grunt-contrib-watch": "~0.6.1",
-        "grunt-rev": "~0.1.0",
-        "grunt-autoprefixer": "~0.8.0",
-        "grunt-usemin": "~2.3.0",
-        "grunt-mocha": "~0.4.11",
-        "grunt-newer": "~0.7.0",
-        "grunt-svgmin": "~0.4.0",
-        "grunt-concurrent": "~0.5.0",
-        "load-grunt-tasks": "~0.6.0",
-        "time-grunt": "~0.3.2",
-        "grunt-aws-s3": "~0.9.0",
-        "jshint-stylish": "~0.2.0",
+        "assemble": "^0.4.37",
+        "grunt": "^0.4.5",
+        "grunt-contrib-copy": "^0.5.0",
+        "grunt-contrib-concat": "^0.4.0",
+        "grunt-contrib-uglify": "^0.5.0",
+        "grunt-contrib-jshint": "^0.10.0",
+        "grunt-contrib-cssmin": "^0.10.0",
+        "grunt-contrib-connect": "^0.8.0",
+        "grunt-contrib-clean": "^0.5.0",
+        "grunt-contrib-htmlmin": "^0.3.0",
+        "grunt-bower-install": "^1.4.0",
+        "grunt-contrib-imagemin": "^0.7.1",
+        "grunt-contrib-watch": "^0.6.1",
+        "grunt-rev": "^0.1.0",
+        "grunt-autoprefixer": "^0.8.0",
+        "grunt-usemin": "^2.3.0",
+        "grunt-mocha": "^0.4.11",
+        "grunt-newer": "^0.7.0",
+        "grunt-svgmin": "^0.4.0",
+        "grunt-concurrent": "^0.5.0",
+        "load-grunt-tasks": "^0.6.0",
+        "time-grunt": "^0.3.2",
+        "grunt-aws-s3": "^0.9.0",
+        "jshint-stylish": "^0.2.0",
         "assemble-contrib-permalinks": "*",
-        "assemble-contrib-sitemap": "*"
+        "assemble-contrib-sitemap": "*",
+        "bower": "^1.3.5"
     },
     "scripts": {
         "test": "grunt assemble"
