--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "jshint-stylish": "^0.2.0",
         "assemble-contrib-permalinks": "*",
         "assemble-contrib-sitemap": "*",
-        "bower": "^1.3.5"
+        "bower": "^1.3.5",
+        "grunt-htmlrefs": "^0.4.2"
     },
     "scripts": {
         "test": "grunt assemble"
