--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "~1.2.10",
     "angular-route": "~1.2.16",
     "angular-charts":"~0.2.2",
-    "font-awesome": "~4.0.3"
+    "font-awesome": "~4.1.0",
+    "d3": "~3.4.9"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.10",
