--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
         "time-grunt": "^0.3.2",
         "grunt-aws-s3": "^0.9.0",
         "jshint-stylish": "^0.2.0",
-        "assemble-contrib-permalinks": "*",
-        "assemble-contrib-sitemap": "*",
+        "assemble-contrib-permalinks": "^0.3.6",
+        "assemble-contrib-sitemap": "^0.2.1",
         "bower": "^1.3.5",
-        "grunt-htmlrefs": "^0.4.2"
+        "grunt-htmlrefs": "^0.5.0"
     },
     "scripts": {
         "test": "grunt assemble"
