--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,22 @@
 {
-  "name": "clindesk.org",
-  "version": "0.0.0",
-  "dependencies": {
-    "angular": "~1.2.10",
-    "json3": "~3.3.2",
-    "jquery": "~1.9.1",
-    "bootstrap": "~3.2.0",
-    "underscore": "~1.6.0",
-    "angular-cookies": "~1.2.10",
-    "angular-sanitize": "~1.2.10",
-    "angular-route": "~1.2.16",
-    "angular-charts":"~0.2.2",
-    "font-awesome": "~4.1.0",
-    "d3": "~3.4.9"
-  },
-  "devDependencies": {
-    "angular-mocks": "~1.2.10",
-    "angular-scenario": "~1.2.10"
-  }
+    "name": "clindesk.org",
+    "version": "0.0.0",
+    "dependencies": {
+        "angular": "~1.2.10",
+        "json3": "~3.3.2",
+        "jquery": "~1.9.1",
+        "bootstrap": "~3.2.0",
+        "underscore": "~1.6.0",
+        "angular-cookies": "~1.2.10",
+        "angular-sanitize": "~1.2.10",
+        "angular-route": "~1.2.16",
+        "angular-charts":"~0.2.2",
+        "font-awesome": "~4.1.0",
+        "d3": "~3.4.9",
+        "ace": "1.1.3"
+    },
+    "devDependencies": {
+        "angular-mocks": "~1.2.10",
+        "angular-scenario": "~1.2.10"
+    }
 }
