--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
         "angular-charts":"~0.2.2",
         "font-awesome": "~4.1.0",
         "d3": "~3.4.9",
-        "ace-builds": "1.1.3"
+        "medium-editor": "^1.8.14"
     },
     "devDependencies": {
         "angular-mocks": "~1.2.10",
