--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "devDependencies": {
         "assemble": "^0.4.37",
         "grunt": "^0.4.5",
+        "grunt-cli": "*",
         "grunt-contrib-copy": "^0.5.0",
         "grunt-contrib-concat": "^0.4.0",
         "grunt-contrib-uglify": "^0.5.0",
