--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "grunt-htmlrefs": "^0.5.0"
     },
     "scripts": {
-        "test": "grunt assemble"
+        "test": "grunt test"
     },
     "engines": {
         "node": ">=0.10.0"
