--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - 0.10
 notifications:
-    email: false
+    email: true
 before_install:
     - npm install -g grunt-cli
 install:
