--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "dependencies": {},
     "devDependencies": {
-        "assemble": "^0.4.37",
+        "assemble": "0.4.37",
         "grunt": "^0.4.5",
         "grunt-cli": "*",
         "grunt-contrib-copy": "^0.5.0",
