--- a/.jshintrc
+++ b/.jshintrc
@@ -13,7 +13,7 @@
     "noarg": true,
     "quotmark": "single",
     "undef": true,
-    "unused": true,
+    "unused": "vars",
     "strict": true,
     "trailing": true,
     "smarttabs": true,
