--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "dependencies": {},
     "devDependencies": {
         "assemble": "0.4.37",
+        "assemble-contrib-permalinks": "0.3.6",
+        "assemble-contrib-sitemap": "0.2.1",
+        "bower": "1.3.8",
         "grunt": "0.4.5",
-        "grunt-cli": "*",
+        "grunt-cli": "0.1.13",
         "grunt-contrib-copy": "0.5.0",
         "grunt-contrib-concat": "0.4.0",
         "grunt-contrib-uglify": "0.5.0",
@@ -25,13 +28,10 @@
         "grunt-svgmin": "0.4.0",
         "grunt-concurrent": "0.5.0",
         "load-grunt-tasks": "0.6.0",
-        "time-grunt": "0.3.2",
         "grunt-aws-s3": "0.9.0",
-        "jshint-stylish": "0.3.0",
-        "assemble-contrib-permalinks": "0.3.6",
-        "assemble-contrib-sitemap": "0.2.1",
-        "bower": "1.3.7",
-        "grunt-htmlrefs": "0.5.0"
+        "grunt-htmlrefs": "0.5.0",
+        "jshint-stylish": "0.4.0",
+        "time-grunt": "0.4.0"
     },
     "scripts": {
         "test": "grunt test"
